<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <TextView
      android:id="@+id/application_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/manrope_bold"
      android:text="@string/application"
      android:textColor="@color/white"
      android:textSize="22sp"
      app:layout_constraintBottom_toBottomOf="@+id/back"
      app:layout_constraintTop_toTopOf="@+id/back"
      app:layout_constraintStart_toEndOf="@+id/back"
      android:layout_marginStart="16dp" />

  <ImageButton
      android:id="@+id/back"
      android:layout_width="40dp"
      android:layout_height="40dp"
      android:background="@drawable/grey_button"
      android:src="@drawable/back_arrow"
      android:theme="@style/CustomButton"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_marginTop="36dp"
      android:layout_marginStart="20dp" />

  <ScrollView
      android:layout_height="0dp"
      android:layout_width="match_parent"
      app:layout_constraintTop_toBottomOf="@+id/back"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      android:layout_marginTop="16dp"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/light_grey"
            app:layout_constraintTop_toBottomOf="@+id/cardView2"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="8dp">

          <LinearLayout
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="60dp"
              android:background="@color/dark_grey"
              android:gravity="center">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:text="@string/calendar_1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/calendar_1"
                android:textColor="@color/white"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:gravity="center"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:background="@drawable/blue_button"
                android:theme="@style/CustomButton"
                android:textSize="12sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:text="@string/calendar_2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/calendar_2"
                android:textColor="@color/white"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:gravity="center"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:textSize="12sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/calendar_3"
                android:textColor="@color/white"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:gravity="center"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:textSize="12sp"
                android:text="@string/calendar_3" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/calendar_4"
                android:textColor="@color/white"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:gravity="center"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:textSize="12sp"
                android:text="@string/calendar_4" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/calendar_5"
                android:textColor="@color/white"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:gravity="center"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:textSize="12sp"
                android:text="@string/calendar_5" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/calendar_6"
                android:textColor="@color/white"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:gravity="center"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:textSize="12sp"
                android:text="@string/calendar_6" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/calendar_7"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/grey_button"
                android:src="@drawable/calendar_icon"
                android:theme="@style/CustomButton"
                tools:layout_editor_absoluteY="199dp"
                tools:layout_editor_absoluteX="-20dp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

          </LinearLayout>

          <LinearLayout
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="100dp"
              android:layout_marginTop="60dp"></LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:cardBackgroundColor="@color/light_grey"
            app:cardCornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginTop="8dp"
            android:id="@+id/cardView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

          <androidx.constraintlayout.widget.ConstraintLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="6dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                app:cardBackgroundColor="@color/prefix_waiting"
                android:id="@+id/prefix"
                app:cardCornerRadius="4dp">

              <TextView
                  android:text="@string/prefix_waiting"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:id="@+id/prefix_text"
                  android:textColor="@color/white"
                  android:gravity="center" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:text="@string/submission_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textSize="16sp"
                android:layout_marginStart="16dp" />

            <TextView
                android:text="@string/submission_date_example"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/submission_date"
                app:layout_constraintTop_toTopOf="@+id/textView4"
                app:layout_constraintBottom_toBottomOf="@+id/textView4"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                android:layout_marginStart="8dp"
                android:textColor="@color/teal_200" />
          </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:text="@string/application_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
      </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
  </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>